sonarqube: fixing reliability issues